new-kind-fastapi-app/kubernetes/1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: myapi
        image: somesh3168/myapi:v1
        ports:
        - containerPort: 8000
