new-kind-fastapi-app/kubernetes/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: my-app
