new-kind-fastapi-app/kubernetes/3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ing
spec:
  # tls:
  # - hosts:
  #   - localhost
  #   secretName: ingress-crypto-auth
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysvc
            port:
              number: 80
